fix bug: status area height overflow

--- a/src/main/resources/static/css/rover.css
+++ b/src/main/resources/static/css/rover.css
@@ -789,7 +789,7 @@ input.error {
 
 #status-area {
     width: 100%;
-    height: calc(100% - 69px);
+    height: calc(100% - 129px);
     margin-top: 10px;
     margin-bottom: 10px;
     flex-grow: 1;
